--- a/platformio.ini
+++ b/platformio.ini
@@ -11,31 +11,15 @@
 [platformio]
 src_dir = ./HeishaMon/
 
-[env:d1_mini]
-platform = espressif8266
-board = d1_mini
-board_build.f_cpu=160000000L
+[env:esp32]
+platform = espressif32 # @6.1.0
+board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	links2004/WebSockets@^2.4.0
-	bblanchon/ArduinoJson@^6.19.4
+	bblanchon/ArduinoJson@^6.21.4
 	milesburton/DallasTemperature@^3.9.0
-	jenscski/DoubleResetDetect@^1.0.0
 build_flags =
-	-D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
-
-[env:nodemcu]
-platform = espressif8266
-board = nodemcu
-framework = arduino
-monitor_speed = 115200
-lib_deps = 
-	knolleary/PubSubClient@^2.8
-	links2004/WebSockets@^2.4.0
-	bblanchon/ArduinoJson@^6.19.4
-	milesburton/DallasTemperature@^3.9.0
-	jenscski/DoubleResetDetect@^1.0.0
-build_flags =
-	-D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
+	; -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
