Statically configure WIFI credentials

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,4 +21,7 @@ lib_deps =
 	links2004/WebSockets@^2.4.0
 	bblanchon/ArduinoJson@^6.21.4
 build_flags =
+	-D WIFI_SSID='"${sysenv.WIFI_SSID}"'
+	-D WIFI_PASSWORD='"${sysenv.WIFI_PASSWORD}"'
+	; '-D WIFI_PASSWORD="aaaaa"'
 	; -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
