Connect to mqtt

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,5 +22,7 @@ lib_deps =
 build_flags =
 	-D WIFI_SSID='"${sysenv.WIFI_SSID}"'
 	-D WIFI_PASSWORD='"${sysenv.WIFI_PASSWORD}"'
-	; '-D WIFI_PASSWORD="aaaaa"'
+	-D MQTT_SERVER='"${sysenv.MQTT_SERVER}"'
+	-D MQTT_USERNAME='"${sysenv.MQTT_USERNAME}"'
+	-D MQTT_PASSWORD='"${sysenv.MQTT_PASSWORD}"'
 	; -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
