--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,13 @@
 
 [platformio]
 src_dir = ./HeishaMon/
+default_envs = esp32
 
 [env:esp32]
-platform = espressif32 # @6.1.0
+platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+upload_speed = 460800
 monitor_speed = 115200
 lib_deps = 
 	knolleary/PubSubClient@^2.8
@@ -26,3 +28,9 @@ build_flags =
 	-D MQTT_USERNAME='"${sysenv.MQTT_USERNAME}"'
 	-D MQTT_PASSWORD='"${sysenv.MQTT_PASSWORD}"'
 	; -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
+
+[env:esp32ota]
+extends = env:esp32
+upload_protocol = espota
+upload_flags =
+	--host_port=3232 # requires firewall rule: sudo ufw allow from 192.168.2.0/24 to any port 3232
