Configure static ip address

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,9 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.4
 build_flags =
+	-D WIFI_ADDRESS='"${sysenv.WIFI_ADDRESS}"'
+	-D WIFI_GATEWAY='"${sysenv.WIFI_GATEWAY}"'
+	-D WIFI_SUBNET='"${sysenv.WIFI_SUBNET}"'
 	-D WIFI_SSID='"${sysenv.WIFI_SSID}"'
 	-D WIFI_PASSWORD='"${sysenv.WIFI_PASSWORD}"'
 	-D MQTT_SERVER='"${sysenv.MQTT_SERVER}"'
@@ -32,5 +35,6 @@ build_flags =
 [env:esp32ota]
 extends = env:esp32
 upload_protocol = espota
+upload_port = ${sysenv.STATIC_IP}
 upload_flags =
 	--host_port=3232 # requires firewall rule: sudo ufw allow from 192.168.2.0/24 to any port 3232
