--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,6 @@ build_flags =
 [env:esp32ota]
 extends = env:esp32
 upload_protocol = espota
-upload_port = ${sysenv.STATIC_IP}
+upload_port = ${sysenv.WIFI_ADDRESS}
 upload_flags =
 	--host_port=3232 # requires firewall rule: sudo ufw allow from 192.168.2.0/24 to any port 3232
